--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -8,6 +8,7 @@ footer {
   color: white;
 }
 
+//DOUGHNUT LOGO
 .logo {
   background-image: url(../images/doughnut.png);
   background-position: center;
@@ -17,12 +18,14 @@ footer {
   height: 100px;
 }
 
+//ADDRESS
 .address {
   max-width: 300px;
   font-family: urbanistR;
   text-align: center;
 }
 
+//SOCIAL MEDIA: INSTA, TWITTER, FACEBOOK
 .social {
   max-width: 300px;
   font-family: dosisR;
