--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -17,6 +17,7 @@ p {
   margin-bottom: 16px;
 }
 
+//THESE ARE SOME OF THE FONTS I USED
 @font-face {
   font-family: dosisB;
   src: url(fonts/Dosis-Bold.ttf);
