--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,3 +3,5 @@ $site-peach: #ff9266;
 $site-lightorange: #fabda5;
 $site-white: #ffffff;
 $site-black: #000000;
+
+//THESE ARE THE COLORS I USED ON THE WEBSITE
