--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -3,6 +3,7 @@
   min-height: 800px;
   margin: 0 auto 40px auto;
 
+  //image of bean on contact page
   &__image {
     width: 100%;
     height: 200px;
@@ -109,6 +110,8 @@
       transition: all 1s, ease 0.5s;
     }
   }
+
+  //WHEN HOVER CHANGES COLOR OR FONT SIZE
   &__button:hover {
     background-color: $site-orange;
 
