--- a/scss/history.scss
+++ b/scss/history.scss
@@ -3,6 +3,7 @@
   min-height: 600px;
   //   background-color: blue;
 
+  //IMAGE OF THREE COFFEE CUPS
   &__image {
     width: 100%;
     height: 330px;
@@ -12,6 +13,7 @@
     background-size: cover;
   }
 
+  //IMAGE OF CHEF MAKING DOUGHNUTS
   &__image2 {
     width: 100%;
     height: 500px;
@@ -35,6 +37,7 @@
       color: $site-orange;
     }
   }
+  //PARAGRAPHS FOR THIS PAGE
   &__text-holder {
     width: 100%;
     min-height: 300px;
