--- a/scss/location.scss
+++ b/scss/location.scss
@@ -3,6 +3,7 @@
   min-height: 800px;
   //   background-color: aquamarine;
 
+  //TITLE OF LOCATION PAGE
   &__title {
     width: 100%;
     min-height: 150px;
@@ -22,6 +23,7 @@
     }
   }
 
+  //INPUT AND SEARCH BUTTON STYLE
   &__search {
     margin: 0 auto;
     width: 500px;
@@ -71,6 +73,7 @@
     }
   }
 
+  //IMAGE OF THE MAP ON THE LOCATION PAGE
   &__map {
     max-width: 500px;
     min-height: 500px;
@@ -81,6 +84,7 @@
     background-size: cover;
   }
 
+  //STYLE OF THE 3 RESULTS
   &__results {
     margin: 0 auto;
     max-width: 400px;
