--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -2,6 +2,7 @@
   max-width: 100%;
   min-height: 1000px;
 
+  //TITLE OF THE MENU PAGE
   &__title {
     width: 250px;
     height: 100px;
@@ -17,6 +18,7 @@
     }
   }
 
+  //HOLDER FOR THE MENU ITEMS
   &__item-holder {
     width: 100%;
     min-height: 450px;
@@ -26,12 +28,14 @@
     margin-bottom: 40px;
     // background-color: darkgoldenrod;
 
+    //ACTUAL MENU ITEMS
     &__item {
       width: 300px;
       height: 420px;
       border: $site-orange 2px solid;
       border-radius: 20px;
 
+      //THESE ARE THE PICTURES OF THE ITEMS
       &__coffee {
         margin-top: 15px;
         max-width: 300px;
@@ -82,6 +86,7 @@
         background-size: cover;
       }
 
+      //THIS IS THE BUTTON FOR THE ITEMS
       &__btn {
         max-width: 200px;
         min-height: 60px;
