--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -121,17 +121,17 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 500px) {
   .contact__message {
     width: 350px;
     input {
-      width: 350px;
+      width: 80%;
     }
   }
   .contact__form {
     width: 350px;
     input {
-      width: 350px;
+      width: 80%;
     }
   }
 }
