--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,33 @@ nav .navbtn__subbtn:hover {
   color: #fabda5;
 }
 
+@media only screen and (max-width: 800px) {
+  .navbtn {
+    padding-top: 10px;
+    min-height: 600px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .navbtn__mainbtn {
+    padding-bottom: 10px;
+  }
+  .navbtn__subbtn {
+    padding-bottom: 10px;
+  }
+
+  nav .login {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 footer {
   max-width: 100%;
   min-height: 300px;
@@ -358,11 +385,11 @@ footer {
   }
 }
 .history {
-  width: 100%;
+  max-width: 100%;
   min-height: 600px;
 }
 .history__image {
-  width: 100%;
+  max-width: 100%;
   height: 330px;
   background-image: url(../images/threecups.jpeg);
   background-position: center;
@@ -370,7 +397,7 @@ footer {
   background-size: cover;
 }
 .history__image2 {
-  width: 100%;
+  max-width: 100%;
   height: 500px;
   background-image: url(../images/chef.jpeg);
   background-position: center;
@@ -378,7 +405,7 @@ footer {
   background-size: cover;
 }
 .history__title {
-  width: 100%;
+  max-width: 100%;
   min-height: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -396,7 +423,7 @@ footer {
   color: #ff5919;
 }
 .history__text-holder {
-  width: 100%;
+  max-width: 100%;
   min-height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -409,7 +436,7 @@ footer {
           justify-content: space-evenly;
 }
 .history__text-holder__left {
-  width: 500px;
+  max-width: 500px;
   min-height: 100px;
   padding-right: 30px;
   padding-left: 30px;
@@ -417,7 +444,7 @@ footer {
 .history__text-holder__right {
   padding-right: 30px;
   padding-left: 30px;
-  width: 500px;
+  max-width: 500px;
   min-height: 100px;
 }
 
@@ -831,24 +858,25 @@ footer {
   font-size: 20px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 500px) {
   .contact__message {
     width: 350px;
   }
   .contact__message input {
-    width: 350px;
+    width: 80%;
   }
 
   .contact__form {
     width: 350px;
   }
   .contact__form input {
-    width: 350px;
+    width: 80%;
   }
 }
 .location {
-  width: 100%;
+  max-width: 100%;
   min-height: 800px;
+  padding: 20px;
 }
 .location__title {
   width: 100%;
@@ -868,7 +896,7 @@ footer {
 }
 .location__search {
   margin: 0 auto;
-  width: 500px;
+  max-width: 500px;
   min-height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -974,4 +1002,25 @@ footer {
 .location__results__info p {
   font-family: dosisR;
   font-size: 18px;
+}
+
+@media only screen and (max-width: 800px) {
+  .location__search {
+    max-width: 500px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .location__search__input {
+    padding-bottom: 20px;
+  }
+
+  .location__map {
+    max-width: 300px;
+    min-height: 300px;
+  }
 }
