--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -92,3 +92,27 @@ nav {
     }
   }
 }
+@media only screen and (max-width: 800px) {
+  .navbtn {
+    // width: 236px;
+    padding-top: 10px;
+    min-height: 600px;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 0px;
+    padding-right: 0px;
+    &__mainbtn {
+      padding-bottom: 10px;
+    }
+    &__subbtn {
+      padding-bottom: 10px;
+    }
+  }
+
+  nav .login {
+    // margin: 0 auto;
+    // align-items: center;
+    justify-content: center;
+    // background-color: aqua;
+  }
+}
